# LaCoN-Core

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  Makefile.toml  REUSE.toml  clippy.toml  cspell.dic  deny.toml  rust-toolchain.toml
.cargo/: config.toml
lacon-workspace/: Cargo.toml
lacon-workspace/cli/: Cargo.toml
lacon-workspace/core/: Cargo.toml
lacon-workspace/core/src/: lib.rs
lacon-workspace/core/src/api/: filesystem.rs  mod.rs
lacon-workspace/core/src/api/ffi/: browser.rs
lacon-workspace/core/src/backend/: mod.rs
lacon-workspace/core/src/backend/interpreter/: interner.rs  mod.rs
lacon-workspace/core/src/backend/interpreter/types/primitives/: mod.rs  number.rs  primitive.rs
lacon-workspace/core/src/backend/transformer/code/javascript/: mod.rs
lacon-workspace/core/src/backend/transformer/output/JSON/: mod.rs
lacon-workspace/core/src/frontend/ast/: mod.rs
lacon-workspace/core/src/frontend/ast/types/primitives/: number.rs  value.rs
lacon-workspace/core/src/frontend/lexer/: error.rs  keyword_type.rs  keywords.rs  mod.rs  operators.rs  position.rs  scanner.rs  scanner_old.rs  token.rs  token_type.rs
lacon-workspace/core/src/frontend/lexer/keyword/: impls.rs  kind.rs  mod.rs
lacon-workspace/core/src/frontend/lexer/operator/: fncs.rs  impls.rs  kind.rs  mod.rs  structs.rs
lacon-workspace/core/src/frontend/lexer/syntax/: kind.rs
lacon-workspace/core/src/frontend/lexer/token/: impls.rs  kind.rs  mod.rs  structs.rs
lacon-workspace/core/src/runtime/: engine.rs  mod.rs
lacon-workspace/core/src/shared/: mod.rs  read.rs
lacon-workspace/core/src/shared/common/: characters.rs
lacon-workspace/core/src/shared/error/: enums.rs  impls.rs  kind.rs  mod.rs  structs.rs
lacon-workspace/core/src/shared/errors/: error.rs  error_type.rs  mod.rs
lacon-workspace/core/src/shared/file/: enums.rs  impls.rs  mod.rs  structs.rs
lacon-workspace/core/src/shared/position/: mod.rs
lacon-workspace/core/src/shared/unit/: arena.rs  definition.rs  dimensions.rs  formulas.rs  impls.rs  kind.rs  mod.rs  prefixes.rs  props.rs  structs.rs  units.rs  units_declaration.rs
lacon-workspace/lsp/: Cargo.toml
lacon-workspace/lsp/src/: main.rs  server.rs  types.rs
lacon-workspace/test/: Cargo.toml
lacon-workspace/test/lacon_files/: aliases.lacon  common_test.lacon  energy_generator.slacon  error.lacon  schema.slacon  simple.lacon
lacon-workspace/test/lacon_files/lexer_results/: aliases.lacon.tokens  common_test.lacon.tokens  energy_generator.slacon.tokens  energy_generators.lacon.tokens  energy_generators.llacon.tokens  error.lacon.tokens  schema.slacon.tokens  schema_use.llacon.tokens  simple.lacon.tokens
lacon-workspace/test/src/: main.rs  strings.rs
lacon-workspace/wasm/: Cargo.toml
lacon-workspace/wasm/src/: lib.rs
tests/files/: big.lacon  common_test.lacon  declaration.lacon  energy_generator.slacon  energy_generators.lacon  energy_generators.llacon  event.lacon  schema_use.llacon  unicode.lacon  速度テスト.lacon
tests/files/_lexer_results/: big.lacon.tokens  common_test.lacon.tokens  energy_generator.slacon.tokens  energy_generators.lacon.tokens  energy_generators.llacon.tokens  error.lacon.tokens  schema.slacon.tokens  schema_use.llacon.tokens  simple.lacon.tokens  unicode.lacon.tokens  速度テスト.lacon.tokens
tests/lexer/: Cargo.toml
tests/lexer/src/: big_strings.rs  lexer_direct_0.rs  lexer_files_to_token_lists.rs  main.rs
tests/parser/: Cargo.toml
