[workspace]
members = [
  "lacon-workspace/core",
  "lacon-workspace/cli",
  "lacon-workspace/test",
  "lacon-workspace/wasm",
  "lacon-workspace/lsp",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
core = { path = "lacon-workspace/core", version = "0.1.0" }
lsp = { path = "lacon-workspace/lsp", version = "0.1.0" }
