[workspace]
members = ["lacon-workspace/*", "tests/lexer", "tests/parser"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
authors = ["Yalla Nkardaz"]
license = "MIT"
categories = ["compilers", "parser-implementations"]
keywords = ["LaCoN"]
homepage = "https://github.com/LaCoN-Lang"
repository = "https://github.com/LaCoN-Lang/LaCoN-Core"

[workspace.dependencies]
# Local Workspace Packages
lacon-core = { path = "lacon-workspace/core", version = "0.1.0" }
lacon-lsp = { path = "lacon-workspace/lsp", version = "0.1.0" }

# CLI and Error Handling
clap = { version = "4.5.58", features = ["derive"] }
anyhow = "1.0.101"
thiserror = "2.0.18"

# Parsing and Text Processing
lasso = "0.7.3"
memchr = "2.8.0"
phf = { version = "0.13.1", features = ["macros"] }
regex = "1.12.3"
unicode-ident = "1.0.23"

# Memory and Data Structures
bitflags = "2.10.0"
bumpalo = "3.19"
lazy_static = "1.5.0"

# Code Generation and Enums
paste = "1.0"
strum = "0.27"
strum_macros = "0.27"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebAssembly
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

# Profiling
flame = "0.2"
flamer = "0.5"


[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
collapsible_if = "warn"
