[package]
name = "lacon-cli"
description = "Command line interface for LaCoN"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
lacon-core = { workspace = true }

anyhow.workspace = true
clap.workspace = true
