[package]
name = "core"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
regex = "1.12.2"
paste = "1.0"
bitflags = "2.10.0"
phf = { version = "0.13.1", features = ["macros"] }
