[package]
name = "core"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
regex = "1.12.2"
paste = "1.0"
bitflags = "2.10.0"
phf = { version = "0.13.1", features = ["macros"] }
lazy_static = "1.5.0"
half = "2.7"
f128 = "0.2"
