[package]
name = "lacon-core"
description = "Analyze and interpret LaCoN code"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
regex.workspace = true
paste.workspace = true
bitflags.workspace = true
phf.workspace = true
lazy_static.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
memchr.workspace = true
bumpalo.workspace = true
unicode-ident.workspace = true
lasso.workspace = true

flame.workspace = true
flamer.workspace = true
