[package]
name = "lacon-wasm"
description = "WebAssembly bindings for LaCoN"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true


[lib]
crate-type = ["cdylib"]

[dependencies]
lacon-core.workspace = true

wasm-bindgen.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
serde_json.workspace = true
js-sys.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-bulk-memory"]
