[package]
name = "lexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
lacon-core.workspace = true

flame.workspace = true
flamer.workspace = true

[lints]
workspace = true

[dev-dependencies]
memory-stats = "1.2.0"
